--- a/main.css
+++ b/main.css
@@ -58,6 +58,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 50%;
 }
 .groupprojectimg {
   border: 2px inset#000000;
