Created library section

--- a/main.css
+++ b/main.css
@@ -357,8 +357,34 @@ a {
   margin: 2%;
   text-align: center;
 }
+/* Library CSS */
+#HobbyBooks {
+  border-radius: 1px;
+  background-image: linear-gradient(180deg, #eed094 88%, #92805b 12%);
+  border: 0.5em solid #713b09;
+  box-shadow: 2px 2px 0px 1px #877654;
+  padding-top: 3%;
+  padding-bottom: 0px;
+  margin: 2%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+librarybook {
+  padding: 0.5em;
+  border: 0.01em solid #000000;
+  border-radius: 3px;
+  font-size: 1.8em;
+  writing-mode: vertical-rl;
+  text-align: center;
+  white-space: normal;
+  box-shadow: 2px 0px 4px 1px #76674a;
+}
+librarybook:hover {
+  border: 0.01em double #2fcea9;
+}
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 580px) {
   .prev, .next {
      font-size: 11px
  }
